swager comment update
