# docs/swagger.json
@@ -413,6 +413,108 @@
                 }
             }
         },
+        "/form/": {
+            "put": {
+                "description": "update Form",
+                "tags": [
+                    "Froms"
+                ],
+                "summary": "update Form",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Form"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete Form",
+                "tags": [
+                    "Froms"
+                ],
+                "summary": "Delete Form",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Form"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/form/id": {
+            "get": {
+                "description": "Get Form",
+                "tags": [
+                    "Froms"
+                ],
+                "summary": "Get Form",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Item ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Form"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/forms/": {
+            "get": {
+                "description": "Get Forms",
+                "tags": [
+                    "Froms"
+                ],
+                "summary": "Get Forms",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Form"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/province/city/id": {
             "post": {
                 "description": "Add City to Province",
@@ -737,19 +839,11 @@
         "models.AssignmentType": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "description": "required: false",
-                    "type": "string"
-                },
                 "id": {
                     "description": "required: false",
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "description": "required: false",
                     "type": "string"
                 }
             }
@@ -768,10 +862,6 @@
         "models.EstateType": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "description": "required: false",
-                    "type": "string"
-                },
                 "id": {
                     "description": "required: false",
                     "type": "string"
@@ -779,9 +869,62 @@
                 "name": {
                     "description": "The name for a EstateType\nexample: خرید\nrequired: true",
                     "type": "string"
+                }
+            }
+        },
+        "models.Field": {
+            "type": "object",
+            "properties": {
+                "fieldtype": {
+                    "type": "string"
                 },
-                "updated_at": {
-                    "description": "required: false",
+                "fileds": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Field"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "max": {
+                    "type": "number"
+                },
+                "min": {
+                    "type": "number"
+                },
+                "option": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "optional": {
+                    "type": "boolean"
+                },
+                "title": {
+                    "description": "Name      string        `json:\"name\" bson:\"name\"`",
+                    "type": "string"
+                },
+                "value": {
+                    "$ref": "#/definitions/models.Valuetype"
+                }
+            }
+        },
+        "models.Form": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "sections": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Section"
+                    }
+                },
+                "title": {
+                    "description": "Name string        `json:\"name\" bson:\"name\"`\nSections []map[string]interface{} `json:\"sections\" bson:\"sections\"`",
                     "type": "string"
                 }
             }
@@ -795,16 +938,28 @@
                         "$ref": "#/definitions/models.City"
                     }
                 },
-                "created_at": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Section": {
+            "type": "object",
+            "properties": {
+                "fields": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Field"
+                    }
                 },
-                "updated_at": {
+                "id": {
+                    "type": "string"
+                },
+                "title": {
+                    "description": "Name   string        `json:\"name\" bson:\"name\"`",
                     "type": "string"
                 }
             }
@@ -812,7 +967,7 @@
         "models.Unit": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "- bson:": {
                     "type": "string"
                 },
                 "id": {
@@ -820,37 +975,32 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
         "models.User": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
                 "mobile": {
                     "type": "string"
                 },
+                "name": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
                 "role": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_name": {
-                    "type": "string"
+                    "description": "owner 0 Admin 1 User 2",
+                    "type": "integer"
                 }
             }
+        },
+        "models.Valuetype": {
+            "type": "object"
         }
     },
     "securityDefinitions": {
@@ -858,6 +1008,9 @@
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
+        },
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
